2010-02-11  Richard Guenther  <rguenther@suse.de>

	PR lto/41664
	* tree-ssa-alias.c (refs_may_alias_p_1): Canonicalize
	pointer-vs-decl case by swapping refs.  Handle some cases
	of pointer-vs-decl disambiguations more conservatively.
	* cfgexpand.c (gimple_expand_cfg): Set gimple_df->in_ssa_p
	to false after expanding.

2010-02-11  Richard Guenther  <rguenther@suse.de>

	PR driver/43021
	* gcc.c (process_command): Handle LTO file@offset case more
	appropriately.

2010-02-11  Jakub Jelinek  <jakub@redhat.com>

	* reload1.c (eliminate_regs_1): If insn is DEBUG_INSN, avoid any
	modifications outside of the DEBUG_INSN.  Accept CLOBBERs inside
	of DEBUG_INSNs.
	(eliminate_regs_in_insn): Eliminate regs even in DEBUG_INSNs.

	* dwarf2out.c (mem_loc_descriptor) <case MEM>: Use DW_OP_deref_size
	if MEM's mode size isn't DWARF2_ADDR_SIZE.
	(mem_loc_descriptor) <do_scompare>: Allow also VOIDmode arguments.
	Optimize eq/ne comparisons when both arguments are known to be
	zero-extended.
	(mem_loc_descriptor) <do_ucompare>: Allow also VOIDmode arguments.
	Don't mask operands unnecessarily if they are known to be already
	zero-extended.

2010-02-10  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-conflicts.c (add_insn_allocno_copies): Use find_reg_note
	instead of loop.

2010-02-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43017
	* tree-vrp.c (vrp_int_const_binop): Trust int_const_binop
	for wrapping signed arithmetic.

2010-02-10  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43010
	* dwarf2out.c (retry_incomplete_types): Don't call gen_type_die
	if no debug info should be emitted for it.

2010-02-10  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.c (find_barrier): Skip call insn with a REG_EH_REGION
	note when flag_exceptions is set.

2010-02-10  Duncan Sands  <baldrick@free.fr>

	* Makefile.in (PLUGIN_HEADERS): Add debug.h.

2010-02-10  Richard Guenther  <rguenther@suse.de>

	PR c/43007
	* tree.c (get_unwidened): Handle constants.